<resources>
    <string name="app_name">Mnawarah</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- for FaceBook login -->
    <string name="facebook_app_id">128716447819546</string>
    <string name="fb_login_protocol_scheme">fb128716447819546</string>

    <!-- for Dialogs -->
    <string name="ok">OK</string>
    <string name="cancel">cancel</string>
    <string name="please_wait">Please Wait...</string>

    <!-- Main Activity -->
    <!-- When click physical back Button at the Main page -->
    <string name="back_exit">Click BACK again to exit</string>
    <!-- in case of empty screens -->
    <string name="no_cards_to_show">No Cards Here</string>

    <!-- for the sliding tabs -->
    <string name="first_tab">Available Cards</string>
    <string name="second_tab">My Cards</string>

    <!-- for Navigation Drawer -->
    <string name="available_cards">Available Cards</string>
    <string name="my_cards">My Cards</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>

    <!-- for card view layout -->
    <string name="edit_card">Edit Card</string>
    <string name="customize_card">Customize Card</string>

    <!-- for Share Button -->
    <string name="share_informer">Share Your Card !!</string>
    <string name="share_text">check my last customized card from Mnawarah</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>

</resources>
