<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/available_cards"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/available_cards" />
        <item
            android:id="@+id/my_cards"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/my_cards" />
        <item
            android:id="@+id/contact_us"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/contact_us" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/logout" />
    </group>

</menu>
